# tech-europe-hackathon

./: .env.example  .gitignore  .vercelignore  EXAMPLE_LESSON.md  README.md  pyproject.toml  vercel.json
assets/gen_map/: earth.html
assets/lessons/attention/: subtitles.srt
assets/lessons/attention_brainrot/: attention_brainrot.json  sources.json
assets/lessons/caesar/: sources.json
assets/lessons/hormuz/: sources.json
lessons/: caesar.json  deepseek.json
src/backend/: main.py
src/backend/onboarding/: __init__.py  __main__.py  agent.py  app.py  config.py  gradium_stt.py  gradium_tts.py  profile.py  session.py
src/backend/task_to_class/: __init__.py  course_generator.py  models.py  pipeline.py  query_builder.py  scraper.py  validator.py
src/backend/video_generation/: __init__.py  config.json  config.py  ffmpeg_utils.py  inspection_guide.md  instructions.md  manim_textbook.md  run.py  workspace.py
src/backend/video_generation/tests/: test_animate_image.py  test_brainrot_overlay.py  test_gen_image.py  test_gen_tts.py  test_gen_video.py  test_load_lesson.py  test_sources.py  test_stitch.py  test_subtitles.py  test_validate_script.py  test_workspace.py
src/backend/video_generation/tools/: animate_image.py  brainrot_overlay.py  gen_image.py  gen_manim.py  gen_map.py  gen_map_server.py  gen_tts.py  gen_video.py  sources.py  stitch.py  subtitles.py  validate_script.py
src/frontend/: next.config.ts  package-lock.json  package.json
src/frontend-test-onboarding/: package-lock.json  package.json
src/frontend-test-onboarding/app/: globals.css  layout.tsx  onboarding-client.tsx  page.tsx
src/frontend/public/: pcm-worklet.js
src/frontend/src/app/: globals.css  layout.tsx  page.tsx  template.tsx
src/frontend/src/constants/: index.ts
src/frontend/src/hooks/: useChat.ts  useCourse.ts  useOnboardingVoice.ts  useVoiceRecording.ts
src/frontend/src/lib/: courseDraftStore.ts  feedDirection.ts  fetcher.ts  parseCourse.ts
src/frontend/src/mock/: exemple.txt
(+43 files in other folders)
