[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.17.2",
    "openai>=1.30.0",
    "tavily-python>=0.3.0",
    "gliner2[local]",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "gradium>=0.1.0",
    "fal-client>=0.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.7",
    "pillow>=10.0",
    "manim>=0.20.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
testpaths = ["src/backend/video_generation/tests"]
markers = [
    "costly: tests that hit real paid external APIs (excluded by default)",
]
addopts = "-m 'not costly'"
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/backend"]
